hard-gists/8678538/run.log
=== Docker Run Log for 8678538 ===
Started at: Mi 29. Okt 17:54:46 CET 2025

[2025-10-29 17:54:47] START: Running container for 8678538
[2025-10-29 17:54:47] SUCCESS: Container 54fb96f5cea500d5a02067624fb92af2f8a04233dd09125fb01227a4327d7447 started for 8678538
=== Container logs for 8678538 ===
  File "/snippet.py", line 17
    print "recording..."
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8678538 ===
[2025-10-29 17:54:49] INFO: Container 54fb96f5cea500d5a02067624fb92af2f8a04233dd09125fb01227a4327d7447 has stopped
